feat: Added raw json object as data field for block api. Removed BlockResponseModel
